<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/burger_king_whopper_672_cal" />

            <EditText
                android:id="@+id/input1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#C6DEF7"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/num"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="5dp"
                android:textColorHint="#455A64"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="#FF5722"
                android:text="@string/burger_king_double_whopper_894_cal" />

            <EditText
                android:id="@+id/input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#2196F3"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/num"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="5dp"
                android:textColorHint="#FF5722"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/second"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/teal_200"
                android:gravity="center"
                android:text="@string/burger_king_triple_whopper_1471_cal" />

            <EditText
                android:id="@+id/input3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#FFC107"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/num"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="5dp"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/third"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/chicken_nugget_59_cal" />

            <EditText
                android:id="@+id/input4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#9C27B0"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/num"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="5dp"
                android:textColorHint="@color/teal_200"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/result_shows_here"
            android:textSize="30sp"
            android:id="@+id/result"
            android:layout_below="@id/fourth"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>